# nos

./: .gitignore  README.md  Taskfile.dist.yml  Taskfile.yml  meson.build  meson.options  pretty-print.py  xmake.lua
.devcontainer/: devcontainer.json
.github/workflows/: CI.yml  CodeQL.yml  ci.yml  codacy-analysis.yml  codacy-coverage.yml  codacy-security-scan.yml  codacy.yml  codecov.yml  codeql.yml  kernel.yml  native-unit-tests.yml  native.yml
bootloader/: limine.cfg
buildenv/: Dockerfile
config/: limine.cfg  nos.code-workspace
config/x86_64/: kernel.cross-file
cross_file/: kernel-x86_64-clang-18.cross_file
image/: meson.build
include/kernel/: kdef.hpp  kernel.hpp  klog.hpp
include/libc/: assert.h  ctype.h  errno.h  features.h  float.h  inttypes.h  stdio.h  (+8 more)
iso/: meson.build
kernel/: kernel.cpp  limine.cfg  linker-x86_64.ld  meson.build  xmake.lua
kernel/arch/x86_64/: arch.cpp  cpu.cpp
kernel/arch/x86_64/cpu/: gdt.cpp  idt.S  idt.cpp  pic.cpp
kernel/arch/x86_64/drivers/: com_port.cpp  com_port_log_sink.cpp  serial_port.cpp
kernel/config-files/: arch.hpp.in
kernel/config_files/: config.hpp.in
kernel/cxx/: cxa.cpp  ubsan.cpp
kernel/include/: config.hpp  kernel.hpp
kernel/include/arch/: arch.hpp
kernel/include/arch/x86_64/: io.hpp
kernel/include/boot/: loader.hpp
kernel/include/utility/: log.hpp
kernel/init/: bootloader.cpp  kernel.cpp  main.cpp  start.cpp
kernel/kernel/: arch.hpp  config.hpp  def.hpp  kernel.cpp  kernel.hpp  log.cpp  log.hpp  start.cpp
kernel/kernel/arch/: arch.cpp  arch.hpp
kernel/kernel/arch/x86_64/: arch.cpp  arch.hpp  cpu.cpp  gdt.cpp  gdt.hpp  idt.cpp  idt.hpp  interrupt.hpp  io.hpp  isr.cpp  isr.hpp  meson.build  pic.cpp  pic.hpp
kernel/kernel/arch/x86_64/cpu/: cpu-registers.hpp  cpu.cpp  cpu.hpp  gdt.cpp  gdt.hpp  idt-push-pop-registers.inc  idt.S  idt.cpp  idt.hpp  interrupt.hpp  pic.cpp  pic.hpp
kernel/kernel/arch/x86_64/drivers/: com-port-log-printer.cpp  com-port-log-printer.hpp  com-port-logger.cpp  com-port-logger.hpp  com-port.cpp  com-port.hpp  com_port.cpp  com_port.hpp  com_port_log_sink.cpp  com_port_log_sink.hpp  com_port_logger.cpp  com_port_logger.hpp  serial-port.cpp  serial-port.hpp  serial.cpp  serial.hpp  serial_port.cpp  serial_port.hpp
kernel/kernel/arch/x86_64/utility/: com-log-printer.cpp  com-log-printer.hpp  io-port.hpp  io.hpp
kernel/kernel/boot/: kmain.cpp  kmain.hpp  limine.cpp  limine.hpp  start.cpp
kernel/kernel/cxx/: cxa.cpp  cxx-abi.cpp  cxx-abi.hpp  cxxabi.cpp  malloc.cpp  malloc.hpp  memory.cpp  memory.hpp  new.cpp  new.hpp
kernel/kernel/debug/: assert.cpp  assert.hpp
kernel/kernel/drivers/: serial.hpp
kernel/kernel/lang/: cxxabi.cpp  ubsan.cpp
kernel/kernel/libc/: string.cpp  string.h
kernel/kernel/log/: level.hpp  logger.cpp  logger.hpp  message.hpp  serial-sink.cpp  serial-sink.hpp  sink.hpp
kernel/kernel/memory/: allocate.cpp  allocate.hpp  allocation.cpp  allocation.hpp  malloc.cpp  physical_memory.cpp  physical_memory.hpp  physical_memory_allocator.cpp  physical_memory_allocator.hpp  size_conversion.hpp
kernel/kernel/utility/: log.cpp  log.hpp  log_level.hpp  logger.hpp  panic.cpp
kernel/kernel/utility/details/: main-logger.cpp  main-logger.hpp  main_logger.cpp  main_logger.hpp
kernel/lib/: format.cpp  log.cpp  panic.cpp
kernel/libc/: assert.cpp  ctype.cpp  errno.cpp  stdio.cpp  stdlib.cpp  string.cpp  wchar.cpp
kernel/linker/: x86_64.ld
kernel/log/: logger.cpp
kernel/mm/: heap.cpp  hh_pmm_allocator.cpp  pmm.cpp  pmm_allocator.cpp
kernel/source/: kernel.cpp
kernel/source/arch/x86_64/: arch.cpp
kernel/source/boot/: loader.cpp  start.cpp
kernel/source/lang/: cxxabi.cpp
kernel/source/utility/: log.cpp
kernel/std/: alloc.cpp  new.cpp
libs/libc/: meson.build
libs/libc/string/: memcmp.c  memcpy.c  memmove.c  memset.c
libs/libc/tests/string/: memset_tests.cpp
libs/log/: meson.build
libs/log/log/: level.hpp  log.cpp  log.hpp  log.test.cpp  message.hpp  sink.hpp  tag.hpp  tag.test-stringify.hpp
libs/ncxx/: meson.build
libs/ncxx/ncxx/: base-types.hpp  basic-types.hpp  basic-types.test.cpp  config.hpp  def.hpp
libs/ncxx/ncxx/algorithm/: clamp.hpp  clamp.test.cpp
libs/ncxx/ncxx/container/: array.hpp  array.test.cpp  inplace-array.hpp  span.hpp  static-array.hpp
libs/ncxx/ncxx/container/details/: array-base-type.hpp  array-base.hpp  array-base.test.cpp  array-data.cpp  array-data.hpp  array-object.hpp  array-object.test.cpp  array-param-type.hpp  array-size-type.hpp  array-trivial.hpp  array-trivial.test.cpp  is-trivial-array.hpp
libs/ncxx/ncxx/functional/: function.hpp  function.test.cpp
libs/ncxx/ncxx/hash/: crc32.test.cpp
libs/ncxx/ncxx/iterator/: reverse-iterator.hpp
libs/ncxx/ncxx/memory/: address-of.hpp  allocation.cpp  allocation.hpp  block.hpp  construct-at.hpp  construct-at.test.cpp  new.cpp  new.hpp  unique-ptr.hpp  unique-ptr.test.cpp  utility.hpp  voidify.hpp
libs/ncxx/ncxx/memory/allocator/: malloc-allocator.cpp  malloc-allocator.hpp  null-allocator.hpp  system-allocator.cpp  system-allocator.hpp
libs/ncxx/ncxx/range/: data.hpp  find-if.hpp  find-if.test.cpp  find.hpp
libs/ncxx/ncxx/string/: format-argument.hpp  format-to.hpp  format.cpp  format.hpp  format.test.cpp  string-view.hpp  to-string-view.hpp
libs/ncxx/ncxx/test/: asan.hpp  object.fake.hpp
libs/ncxx/ncxx/type-trait/: add-const.test.cpp  add-lvalue-reference.test.cpp  add-rvalue-reference.test.cpp  is-array.hpp  is-array.test.cpp  is-base-of.hpp  is-copy-assignable.hpp  is-copy-constructible.hpp  is-copy-constructible.test.cpp  is-floating-point.hpp  is-integral.hpp  is-move-assignable.hpp  is-move-constructible.hpp  is-same.test.cpp  is-trivially-assignable.hpp  is-trivially-constructible.hpp  is-trivially-copy-assignable.hpp  is-trivially-copy-constructible.hpp  is-trivially-destructible  is-trivially-move-assignable.hpp  is-trivially-move-constructible.hpp  remove-pointer.hpp
libs/ncxx/ncxx/utility/: initializer-list.hpp  integer-sequence.hpp  is-digit.hpp  source-location.hpp  swap.hpp
subprojects/: limine.wrap  nxx.wrap
(+94 files in other folders)
